--- a/_posts/cisco/2010-08-29-ios_safe.markdown
+++ b/_posts/cisco/2010-08-29-ios_safe.markdown
@@ -1,13 +1,15 @@
 ---
 layout: post
-title:  "ios_safe"
+title:  "Ios safe"
 date:   2010-08-29 05:20:31 +0400
-categories: ios_safe
+categories: cisco
 tags: cisco
 ---
 
-# ios_safe
+# Ios safe
+```
 service tcp-keepalives-in
 service tcp-keepalives-out
+```
 
 [http://www.citrin.ru/net:tempate_catalyst](http://www.citrin.ru/net:tempate_catalyst)
