Cisco section 2 step

--- a/_posts/cisco/2017-11-12-asa-nat.markdown
+++ b/_posts/cisco/2017-11-12-asa-nat.markdown
@@ -1,40 +1,41 @@
 ---
 layout: post
-title:  "asa-nat"
+title:  "Nat на cisco asa"
 date:   2017-11-12 07:58:19 +0300
-categories: asa-nat
-tags: cisco
+categories: cisco
+tags: cisco asa
 ---
 
-# asa-nat
+# Nat на cisco asa
 NAT control requires that packets traversing from an inside interface to an outside interface match a NAT rules
 Когда включен nat control пакеты не пропускаются с интерфейса inside на интерфейс outside без nat правила
 
 identity nat (nat 0) пропускает во вне без нат трансляции с реальным адресом, но нельзя начать соединение из вне
+```
 nat 0 192.168.0.0 255.255.255.0 
+```
 NAT exemption (nat 0 access-list command) в данном случае, это аналогично identity nat, но возможно соединение из вне
+```
 access-list NATEX permit ip 10.1.0.0 255.255.0.0 10.2.0.0 255.255.0.0
 nat (IntNet) 0 access-list NATEX
-
+```
 Если включен nat control то нужны nat правила, чтобы передавался траффик
 Если же надо не natить один из адресов, то нужно использовать identity nat 
 
 
-
-
-    NAT Exemption (nat 0 access-list)
-    Policy NAT (static access-list)
-    Static NAT (static без указания номера порта)
-    Static PAT (static с указанием номера порта)
-    Policy NAT (nat id access-list)
-    Dynamic NAT, dynamic PAT (nat id)
+ *  NAT Exemption (nat 0 access-list)
+ *  Policy NAT (static access-list)
+ *  Static NAT (static без указания номера порта)
+ *  Static PAT (static с указанием номера порта)
+ *  Policy NAT (nat id access-list)
+ *  Dynamic NAT, dynamic PAT (nat id)
 
 
 
 
 
 
- Bypassing NAT When NAT Control is Enabled
+## Bypassing NAT When NAT Control is Enabled
 
 If you enable NAT control, then inside hosts must match a NAT rule when accessing outside hosts. If you do not want to perform NAT for some hosts, then you can bypass NAT for those hosts (alternatively, you can disable NAT control). You might want to bypass NAT, for example, if you are using an application that does not support NAT (see the "When to Use Application Protocol Inspection" section for information about inspection engines that do not support NAT).
 
@@ -51,7 +52,7 @@ For identity NAT, even though the mapped address is the same as the real address
 [http://www.mianet.ru/index.php/sysadmin/cisco/126--nat---pixasa](http://www.mianet.ru/index.php/sysadmin/cisco/126--nat---pixasa)
 
 
-
+```
 Phase: 8      
 Type: NAT     
 Subtype: rpf-check
@@ -67,12 +68,12 @@ Additional Information:
         hits=4, user_data=0xa7a14bd8, cs_id=0x0, flags=0x0, protocol=6
         src ip=0.0.0.0, mask=0.0.0.0, port=0
         dst ip=10.98.0.253, mask=255.255.255.255, port=1720, dscp=0x0
+```
 
 
+`name 192.168.1.105 voip-ip`
 
-name 192.168.1.105 voip-ip
-
-
+```
 static (PSI-DMZ,PSI-White) tcp interface 3389 192.168.253.2 3389 netmask 255.255.255.255 
 static (PSI-LAN,PSI-White) tcp interface h323 voip-ip h323 netmask 255.255.255.255 
 static (PSI-LAN,PSI-DMZ) tcp interface 1719 voip-ip 1719 netmask 255.255.255.255 
@@ -87,14 +88,11 @@ static (PSI-LAN,PSI-White) udp interface 1026 voip-ip 1026 netmask 255.255.255.2
 
 no static (vlan12,vlan100) tcp interface h323 10.98.0.253 h323 netmask 255.255.255.255
 
-
 static (vlan12,vlan100) interface 10.98.0.253 netmask 255.255.255.255 
 
 
 
-
 access-list permit udp 10.2.2.0 255.255.255.0 host 172.16.1.5 eq 1718
-
 access-list 100 extended permit udp 10.2.2.0 255.255.255.0 host 172.16.1.5 eq 1718
 
 !--- Command to allow the incoming RAS UDP port.
@@ -108,9 +106,9 @@ access-list 100 extended permit tcp 10.2.2.0 255.255.255.0 host 172.16.1.5 eq h3
 access-list 100 extended permit tcp 81.20.192.0 255.255.240.0 host 81.16.116.142 eq h323
 access-list 100 extended permit udp 81.20.192.0 255.255.240.0 host 81.16.116.142 eq 1718
 access-list 100 extended permit udp 81.20.192.0 255.255.240.0 host 81.16.116.142 eq 1719
+```
 
-
-
+```
 pager lines 24
 mtu inside 1500
 mtu outside 1500
@@ -118,7 +116,9 @@ no failover
 asdm image disk0:/asdm-522.bin
 no asdm history enable
 arp timeout 14400
+```
 
+```
 !--- Command to redirect the h323 protocol traffic received on outside interface to 
 !--- inside interface for the specified IP address.
 
@@ -130,7 +130,7 @@ access-group 100 in interface outside
 MG-ASA1(config)# static (vlan12,vlan100) interface 81.16.116.142 netmask 255.2$
 WARNING: All traffic destined to the IP address of the vlan100 interface is being redirected.
 WARNING: Users will not be able to access any service enabled on the vlan100 interface.
-
+```
 
 
 
@@ -139,12 +139,13 @@ WARNING: Users will not be able to access any service enabled on the vlan100 int
 
 Ещё раз всем здравствуйте, есть проблема котору я не знаю как решить.
 есть следующее :
+```
 ip address outside 212.198.212.210 255.255.255.192
 ip address inside 192.168.0.1 255.255.255.0
 route outside 0.0.0.0 0.0.0.0 212.198.212.211 1
 
 static (inside,outside) 192.168.0.3 212.198.212.210 netmask 255.255.255.255 0 0
-
+```
 И далее весь трафик идущий на 212.198.212.210 - попадает на 192.168.0.3 
 
 
@@ -165,33 +166,24 @@ static (inside,outside) 192.168.0.3 212.198.212.210 netmask 255.255.255.255 0 0
 >как это сделать?
 
 замени static на такую конструкцию:
+```
 static(inside,outside)tcp 195.x.x.x 8080 192.168.1.2 80 netmask 255.255.255.255
+```
 
 
 
 
 
-
-
+```
 ASA1(config)# static (inside,outside) tcp OutsideIP http InsideHost http 
-
-
 static (vlan12,vlan100) tcp 81.16.116.42 http 10.98.0.253 http 
-
-
 static (vlan12,vlan100) interface 81.16.116.142 netmask 255.255.255.255
-
-
 static (vlan12,vlan100) 81.16.116.42 10.98.0.253
-
-
 static (vlan12,vlan100) 81.16.116.42 10.98.0.253 netmask 255.255.255.255
-
 static (vlan100,vlan12) 81.20.204.141 10.98.0.1netmask 255.255.255.255
+```
 
-
-
-
+```
 Phase: 7      
 Type: NAT
 Subtype: rpf-check
@@ -209,30 +201,10 @@ Additional Information:
         dst ip=10.98.0.253, mask=255.255.255.255, port=0, dscp=0x0
 
 
-
-
-
 NAT policies on Interface vlan12:
   match ip vlan12 host 10.98.0.253 vlan100 any
     static translation to 81.16.116.42
     translate_hits = 0, untranslate_hits = 0
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 name 192.168.1.105 voip-ip
@@ -240,46 +212,28 @@ name 192.168.1.105 voip-ip
 static (PSI-LAN,PSI-White) tcp interface h323 voip-ip h323 netmask 255.255.255.255 
 static (PSI-LAN,PSI-DMZ) tcp interface 1719 voip-ip 1719 netmask 255.255.255.255 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    static (dmz,outside) 100.1.70.99 10.1.2.2
-    nat-control
+ static (dmz,outside) 100.1.70.99 10.1.2.2
+   nat-control
 
 
     nat (outside) 1 0 0 outside
     global (dmz) 1 interface
 
+```
 Wow, this is nice. It should perform Dynamic NAT translation on packets originated from the Outside
  and translate them to the DMZ interface’s IP address. 
 Let’s look at PT output:
 
 
-UN-NAT,
+UN-NAT
+```
 nat (outside) 1 0.0.0.0 0.0.0.0 outside
-
-
 
 global (outside) 1 interface
 nat (inside) 1 0.0.0.0 0.0.0.0
 
-
-
 Натить все во вне
     nat (outside) 1 0 0 outside
-    
 
 global (dmz) 1 interface
 
@@ -287,25 +241,23 @@ global (dmz) 1 interface
 
 nat (vlan12) 5 10.98.0.253 255.255.255.255
 global (vlan100) 5 interface 
-
+```
 
 If you want to initiate a connection from the DMZ to inside then dynamic 
 NAT rules will not work. You will need to set up either a nat exemption or a static NAT  ie.
 
 NAT exemption
-
+```
 access-list NATEX permit ip 10.1.0.0 255.255.0.0 10.2.0.0 255.255.0.0
-
 nat (IntNet) 0 access-list NATEX
-
 static NAT
-
 static (IntNet, DMZNet) 10.1.0.0 10.1.0.0 netmask 255.255.0.0
+```
 
 Jon
 
 
-
+```
 nat (vlan12) 0 access-list VOIP-MAXI
 access-list VOIP-MAXI permit 10.98.0.253 255.255.255.255 81.20.192.0 255.255.240.0
 
@@ -357,24 +309,7 @@ access-list 100 extended permit tcp 81.20.192.0 255.255.240.0 host 81.16.116.42 
 no access-list 100 extended permit udp 81.20.192.0 255.255.240.0 host 81.16.116.42 eq 1718 
 no access-list 100 extended permit udp 81.20.192.0 255.255.240.0 host 81.16.116.42 eq 1719 
 no access-list 100 extended permit tcp 81.20.192.0 255.255.240.0 host 81.16.116.42 eq h323
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+```
 
 
 
@@ -401,7 +336,7 @@ static (in,out) GLOB_IP LOC_IP (можно делать с портами static
 т.е. можно обратиться снаружи на глобальный адрес и прокинуться на частный с подменой адреса назначения.
 
 Получается, что изнутри трансляция получается согласно packet-tracer
-
+```
 packet-tracer input inside tcp 10.0.0.253 34567  81.x.x.141 h323
 
 ...
@@ -414,11 +349,12 @@ output-interface: outside
 output-status: up
 output-line-status: up
 Action: allow 
-
+```
 
 
 
 А снаружи не проходит
+```
 packet-tracer input outside tcp 81.x.x.141 34567 10.0.0.253 h323
 ...
 
@@ -442,58 +378,49 @@ output-status: up
 output-line-status: up
 Action: drop
 Drop-reason: (acl-drop) Flow is denied by configured rule
+```
 
 Получается, что сессия может инициироваться только с inside. Как сделать так, чтобы сессия могла инициироваться с обеих сторон?
  Возможно ли это вообще сделать и как?
 
 
 [http://www.anticisco.ru/blogs/?p=72](http://www.anticisco.ru/blogs/?p=72)
+
 [http://www.cisco.com/en/US/products/ps6120/products_configuration_example09186a008081042c.shtml#configs3](http://www.cisco.com/en/US/products/ps6120/products_configuration_example09186a008081042c.shtml#configs3)
+
 [http://www.cisco.com/en/US/products/hw/vpndevc/ps2030/products_configuration_example09186a008069bf1b.shtml](http://www.cisco.com/en/US/products/hw/vpndevc/ps2030/products_configuration_example09186a008069bf1b.shtml)
+
 [http://www.cisco.com/en/US/docs/security/asa/asa82/configuration/guide/nat_overview.html#wp1088419](http://www.cisco.com/en/US/docs/security/asa/asa82/configuration/guide/nat_overview.html#wp1088419)
+
 [http://xgu.ru/wiki/Cisco_ASA/NAT](http://xgu.ru/wiki/Cisco_ASA/NAT)
+
 [http://www.cisco.com/en/US/docs/security/asa/asa82/configuration/guide/nat_control.html#wp1081420](http://www.cisco.com/en/US/docs/security/asa/asa82/configuration/guide/nat_control.html#wp1081420)
+
 [http://www.ccie1.com/?p=361](http://www.ccie1.com/?p=361)
+
 [http://alexandremspmoraes.wordpress.com/2012/03/13/dealing-with-identity-nat-on-asa-pre-and-post-8-3-configuration-models/](http://alexandremspmoraes.wordpress.com/2012/03/13/dealing-with-identity-nat-on-asa-pre-and-post-8-3-configuration-models/)
+
 [http://www.anticisco.ru/forum/viewtopic.php?f=2&t=954](http://www.anticisco.ru/forum/viewtopic.php?f=2&t=954)
+
 [http://www.akvilona.ru/serv/cisco/a_instruction.htm](http://www.akvilona.ru/serv/cisco/a_instruction.htm)
+
 [https://supportforums.cisco.com/thread/1003401](https://supportforums.cisco.com/thread/1003401)
 
 [http://cskt-here.blogspot.ru/2010/07/network-address-translation-nat-with.html](http://cskt-here.blogspot.ru/2010/07/network-address-translation-nat-with.html)
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ASA NAT 8.3
 [http://info-gold.org/4read/83nat](http://info-gold.org/4read/83nat)
+
 [http://www.anticisco.ru/blogs/?p=1064](http://www.anticisco.ru/blogs/?p=1064)
+
 [http://www.anticisco.ru/blogs/?p=1055](http://www.anticisco.ru/blogs/?p=1055)
+
 [http://www.anticisco.ru/blogs/?p=1046](http://www.anticisco.ru/blogs/?p=1046)
+
 [http://www.cisco.com/en/US/docs/security/asa/asa84/configuration/guide/nat_objects.html](http://www.cisco.com/en/US/docs/security/asa/asa84/configuration/guide/nat_objects.html)
+
 [http://www.anticisco.ru/blogs/?p=1077](http://www.anticisco.ru/blogs/?p=1077)
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -504,36 +431,39 @@ Cisco Adaptive Security Appliance Software Version 8.0(4)
 Hardware:   ASA5510, 1024 MB RAM, CPU Pentium 4 Celeron 1600 MHz
 
 На outside интерфейсе 
-
+```
 interface Ethernet0/1.100
  vlan 100
  nameif outside
  security-level 0
  ip address 82.x.x.142 255.255.255.252
-
+```
 На inside
-
+```
 interface Ethernet0/1.12
  vlan 12
  nameif inside
  security-level 100
  ip address 10.0.0.1 255.255.255.0
-
+```
 
 Интернета нет и не надо. Нужен доступ извне только для adpack
 
 Чтобы не зарезать ничего пока сделал такой access-list
-
+```
 access-list outside_access_in extended permit ip any any 
 access-list outside_access_in extended permit tcp any any 
 access-list outside_access_in extended permit udp any any 
 access-list outside_access_in extended permit icmp any any
 
 access-group outside_access_in in interface outside
+```
 
 Включил инспекцию, согласно руководству
 [http://www.cisco.com/en/US/products/ps6120/products_configuration_example09186a008081042c.shtml#configs3](http://www.cisco.com/en/US/products/ps6120/products_configuration_example09186a008081042c.shtml#configs3)
 
+
+```
 policy-map type inspect dns preset_dns_map
  parameters
   message-length maximum 512
@@ -542,23 +472,21 @@ policy-map global_policy
   inspect dns preset_dns_map 
   inspect h323 h225 
   inspect h323 ras 
+```
+
 
 Прописал статический nat
+```
 static (vlan12,vlan100) interface 10.98.0.253 netmask 255.255.255.255 
+```
 
 Если вместо asa был linux, то сделал бы 2 правила
+```
 -A PREROUTING -s ip_adpack -d outside_ip -p tcp -m tcp --dport XXXX -j DNAT --to-destination 10.0.0.253:XXXX
 -A POSTROUTING -s 10.0.0.253/32 -d ip_addpack/32 -o outside -j SNAT --to-source outside_ip 
+```
 
 Вместо XXXX порты для h323 (не знаю заработало бы или нет для h323, но для http точно работает)
 
 
 Не могу понять логику работы static nat
-
-
-
-
-
-
-
-
