--- a/_posts/cisco/2017-11-25-ASA-snmp.markdown
+++ b/_posts/cisco/2017-11-25-ASA-snmp.markdown
@@ -1,26 +1,27 @@
 ---
 layout: post
-title:  "ASA-snmp"
+title:  "Настройка snmp на ASA"
 date:   2017-11-25 03:49:56 +0300
-categories: ASA-snmp
-tags: cisco
+categories: cisco
+tags: cisco asa
 ---
 
-# ASA-snmp
+# Настройка snmp на ASA
+```
 snmp-server community 
 snmp-server host inside ip.snmp1.server community password
 
-snmp-server host vpn 10.192.10.190 community Udgl48dS
+snmp-server host vpn 10.192.10.190 community UdgComdS
 snmp-server enable
 snmp-server location SGOK
 snmp-server contact iptech@sc.ru
-
-
-poll добавить
+```
 
 
 
-snmp-server host outside 10.192.10.190 community Udgl48dS
+```
+snmp-server host outside 10.192.10.190 community UdgComdS
 snmp-server enable
 snmp-server location SGOK
 snmp-server contact iptech@sc.ru
+```
